force-app/main/default/objects/Account/fields/DistributorLookup__c.field-meta.xml
<CustomField>
    <fullName>DistributorLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Distributors can be entered here (Account Record Type)</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filterItems>
        <infoMessage>Only Distributors can be entered here (Account Record Type)</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealers (Under Distribution)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>