force-app/main/default/objects/Account/fields/Do_you_currently_have_a_music_service_no__c.field-meta.xml
<CustomField>
    <fullName>Do_you_currently_have_a_music_service_no__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you currently have a music service no</label>
    <type>Checkbox</type>
</CustomField>