force-app/main/default/objects/Account/fields/Do_you_currently_use_video_conferencing__c.field-meta.xml
<CustomField>
    <fullName>Do_you_currently_use_video_conferencing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you currently use video conferencing?</label>
    <type>Checkbox</type>
</CustomField>