force-app/main/default/objects/Account/fields/Dummy_Asset_Field__c.field-meta.xml
<CustomField>
    <fullName>Dummy_Asset_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Creating this field, so a field can be added to a custom report type</description>
    <label>Dummy Asset Field</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>