force-app/main/default/objects/Account/fields/Dunning_Activated__c.field-meta.xml
<CustomField>
    <fullName>Dunning_Activated__c</fullName>
    <label>Dunning Activated</label>
    <type>Date</type>
</CustomField>