force-app/main/default/objects/Account/fields/Dunning_Active__c.field-meta.xml
<CustomField>
    <fullName>Dunning_Active__c</fullName>
    <formula>IF( ISPICKVAL(AR_Status__c, &quot;Dunning Activated&quot;) , True,

IF( Dunning_Activated__c &gt; Dunning_Removed_Reversed__c , TRUE, 

False))</formula>
    <label>Dunning Active</label>
    <type>Checkbox</type>
</CustomField>