force-app/main/default/objects/Account/fields/Dunning_BLOCKED__c.field-meta.xml
<CustomField>
    <fullName>Dunning_BLOCKED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dunning BLOCKED</label>
    <type>Checkbox</type>
</CustomField>