force-app/main/default/objects/Account/fields/Dunning_Removed_Reversed__c.field-meta.xml
<CustomField>
    <fullName>Dunning_Removed_Reversed__c</fullName>
    <label>Dunning Removed (Reversed)</label>
    <type>Date</type>
</CustomField>