force-app/main/default/objects/Account/fields/Dunning_Requested__c.field-meta.xml
<CustomField>
    <fullName>Dunning_Requested__c</fullName>
    <label>Dunning Requested</label>
    <type>Date</type>
</CustomField>