force-app/main/default/objects/Account/fields/DX_Product_Formula__c.field-meta.xml
<CustomField>
    <fullName>DX_Product_Formula__c</fullName>
    <formula>IF(DX_Product_Sum_from_Opp__c &gt; 0,&quot;DX&quot;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DX Product Formula</label>
    <type>Text</type>
</CustomField>