force-app/main/default/objects/Account/fields/DX_Product_Sum_from_Opp__c.field-meta.xml
<CustomField>
    <fullName>DX_Product_Sum_from_Opp__c</fullName>
    <description>Count of DX product subscriptions</description>
    <inlineHelpText>Count of Active DX product subscriptions: F52_Active__c = TRUE AND Business_Use_Case__c = &apos;API Developer Experience&apos; (refreshed nightly)</inlineHelpText>
    <label>Active DX Subscript Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>