force-app/main/default/objects/Account/fields/Enterprise_Customer__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enterprise Customer</label>
    <type>Checkbox</type>
</CustomField>