force-app/main/default/objects/Account/fields/Entitlement_Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Process_Name__c</fullName>
    <formula>Entitlement__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entitlement Process Name</label>
    <type>Text</type>
</CustomField>