force-app/main/default/objects/Account/fields/EX_Product_Formula__c.field-meta.xml
<CustomField>
    <fullName>EX_Product_Formula__c</fullName>
    <formula>IF(EX_Product_Sum_from_Opp__c &gt; 0,&quot;EX&quot;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EX Product Formula</label>
    <type>Text</type>
</CustomField>