force-app/main/default/objects/Account/fields/EX_Product_Sum_from_Opp__c.field-meta.xml
<CustomField>
    <fullName>EX_Product_Sum_from_Opp__c</fullName>
    <description>Sums the EX product count from Subscriptions</description>
    <inlineHelpText>Subscript COUNT for &quot;Employee Experience &quot;BusUseCase and F52_Active = True (refreshed nightly)</inlineHelpText>
    <label>Active EX Subscript Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>