force-app/main/default/objects/Account/fields/Exclude_from_Onboarding_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Onboarding_Cadence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you this account should be excluded from the 30 day onboarding cadence</description>
    <inlineHelpText>Check this box if you this account should be excluded from the 30 day onboarding cadence</inlineHelpText>
    <label>Exclude from Onboarding Cadence</label>
    <type>Checkbox</type>
</CustomField>