force-app/main/default/objects/Account/fields/Extended_Warranty_Count__c.field-meta.xml
<CustomField>
    <fullName>Extended_Warranty_Count__c</fullName>
    <label>Extended Warranty Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>