force-app/main/default/objects/Account/fields/Extended_Warranty_on_Contract__c.field-meta.xml
<CustomField>
    <fullName>Extended_Warranty_on_Contract__c</fullName>
    <formula>Extended_Warranty_Count__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Warranty on Contract</label>
    <type>Checkbox</type>
</CustomField>