force-app/main/default/objects/Account/fields/External_Dealer_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Dealer_ID__c</fullName>
    <label>External Dealer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>