force-app/main/default/objects/Account/fields/F52_BusinessNameDBA__c.field-meta.xml
<CustomField>
    <fullName>F52_BusinessNameDBA__c</fullName>
    <label>Business Name DBA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>