force-app/main/default/objects/Account/fields/F52_Contract_Uplift__c.field-meta.xml
<CustomField>
    <fullName>F52_Contract_Uplift__c</fullName>
    <description>Contract Uplift%. This value is copied over to the Contract object to apply uplift.</description>
    <inlineHelpText>Contract Uplift%. This value is copied over to the Contract object to apply uplift.</inlineHelpText>
    <label>Contract Uplift%</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>