force-app/main/default/objects/Account/fields/F52_CustomerType__c.field-meta.xml
<CustomField>
    <fullName>F52_CustomerType__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Channel/Partner</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Bill-To</fullName>
            </value>
            <value>
                <fullName>Ship-To</fullName>
            </value>
            <value>
                <fullName>Franchise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>