force-app/main/default/objects/Account/fields/F52_Latest_Account_Balance_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>F52_Latest_Account_Balance_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Latest Account Balance Snapshot</description>
    <inlineHelpText>Latest Account Balance Snapshot</inlineHelpText>
    <label>Latest Account Balance Snapshot</label>
    <referenceTo>blng__AccountBalanceSnapshot__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>