force-app/main/default/objects/Account/fields/F52_Payment_Method_Auto_Pay__c.field-meta.xml
<CustomField>
    <fullName>F52_Payment_Method_Auto_Pay__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payment Method (Auto-Pay)</description>
    <inlineHelpText>this field is populated by a flow, when a PM is made AUTO PAY. This field is only visible to ADMINS.</inlineHelpText>
    <label>Payment Method (Auto-Pay)</label>
    <referenceTo>blng__PaymentMethod__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>