force-app/main/default/objects/Account/fields/F52_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>F52_Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Contact</description>
    <inlineHelpText>Primary Contact</inlineHelpText>
    <label>Primary Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Primary Contact)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>