force-app/main/default/objects/Account/fields/F52_Separate_Invoice_by_Contract__c.field-meta.xml
<CustomField>
    <fullName>F52_Separate_Invoice_by_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Generate a separate Invoice for each Contract. By default, a separate Invoice will be created for each Billing Account, PO# combination.</description>
    <inlineHelpText>Generate a separate Invoice for each Contract. By default, a separate Invoice will be created for each Billing Account, PO# combination.</inlineHelpText>
    <label>Separate Invoice by Contract</label>
    <type>Checkbox</type>
</CustomField>