force-app/main/default/objects/Account/fields/Failure_Notice__c.field-meta.xml
<CustomField>
    <fullName>Failure_Notice__c</fullName>
    <inlineHelpText>This is the last time a card failure notice was sent to the account. This is used by a flow to limit messages to one a day.</inlineHelpText>
    <label>Failure Notice</label>
    <type>DateTime</type>
</CustomField>