force-app/main/default/objects/Account/fields/FIRST_ORDER_DATE_C__c.field-meta.xml
<CustomField>
    <fullName>FIRST_ORDER_DATE_C__c</fullName>
    <inlineHelpText>Recurly</inlineHelpText>
    <label>FIRST_ORDER_DATE_C</label>
    <type>Date</type>
</CustomField>