force-app/main/default/objects/Account/fields/Flow_Cancelled_Subs__c.field-meta.xml
<CustomField>
    <fullName>Flow_Cancelled_Subs__c</fullName>
    <label>Cancelled Subs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>