force-app/main/default/objects/Account/fields/Flow_X3rd_Party_Active_Subs__c.field-meta.xml
<CustomField>
    <fullName>Flow_X3rd_Party_Active_Subs__c</fullName>
    <label>3rd Party Active Subs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>