force-app/main/default/objects/Account/fields/Flow_X3rd_Party_Cancelletions__c.field-meta.xml
<CustomField>
    <fullName>Flow_X3rd_Party_Cancelletions__c</fullName>
    <label>3rd Party Cancelletions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>