force-app/main/default/objects/Account/fields/Food_Type__c.field-meta.xml
<CustomField>
    <fullName>Food_Type__c</fullName>
    <label>Food Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMERICAN</fullName>
            </value>
            <value>
                <fullName>ASIAN</fullName>
            </value>
            <value>
                <fullName>BAKERY/CAFE</fullName>
            </value>
            <value>
                <fullName>BAR FOOD</fullName>
            </value>
            <value>
                <fullName>BBQ</fullName>
            </value>
            <value>
                <fullName>BURGER</fullName>
            </value>
            <value>
                <fullName>CAFE</fullName>
            </value>
            <value>
                <fullName>CAJUN/CREOLE</fullName>
            </value>
            <value>
                <fullName>CARIBBEAN</fullName>
            </value>
            <value>
                <fullName>CHICKEN</fullName>
            </value>
            <value>
                <fullName>CHINESE</fullName>
            </value>
            <value>
                <fullName>COFFEE/TEA</fullName>
            </value>
            <value>
                <fullName>CUBAN</fullName>
            </value>
            <value>
                <fullName>DELI</fullName>
            </value>
            <value>
                <fullName>DONUT</fullName>
            </value>
            <value>
                <fullName>EASTERN EUROPEAN</fullName>
            </value>
            <value>
                <fullName>EUROPEAN</fullName>
            </value>
            <value>
                <fullName>FILIPINO</fullName>
            </value>
            <value>
                <fullName>FRENCH</fullName>
            </value>
            <value>
                <fullName>GREEK</fullName>
            </value>
            <value>
                <fullName>GRILL</fullName>
            </value>
            <value>
                <fullName>HAWAIIAN</fullName>
            </value>
            <value>
                <fullName>HOT DOG</fullName>
            </value>
            <value>
                <fullName>ICE CREAM/YOGURT</fullName>
            </value>
            <value>
                <fullName>INDIAN</fullName>
            </value>
            <value>
                <fullName>ITALIAN</fullName>
            </value>
            <value>
                <fullName>JAPANESE</fullName>
            </value>
            <value>
                <fullName>JUICE/SMOOTHIE</fullName>
            </value>
            <value>
                <fullName>MEDITERRANEAN</fullName>
            </value>
            <value>
                <fullName>MEXICAN/LATIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>