force-app/main/default/objects/Account/fields/Franchise_Type__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Type__c</fullName>
    <label>Franchise Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Franchise HQ</fullName>
            </value>
            <value>
                <fullName>Franchisee Group</fullName>
            </value>
            <value>
                <fullName>Franchisee Group HQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>