force-app/main/default/objects/Account/fields/From_Website_Lead_Form__c.field-meta.xml
<CustomField>
    <fullName>From_Website_Lead_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Website Lead Form</label>
    <type>Checkbox</type>
</CustomField>