force-app/main/default/objects/Account/fields/Future_Interest__c.field-meta.xml
<CustomField>
    <fullName>Future_Interest__c</fullName>
    <label>Future Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Future_Interest</valueSetName>
    </valueSet>
</CustomField>