force-app/main/default/objects/Account/fields/Gaviti_Workflow_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Gaviti_Workflow_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Turn this OFF (False)... and SF will STOP sending Invoice reminders</inlineHelpText>
    <label>Invoice Reminder Workflow Enabled</label>
    <type>Checkbox</type>
</CustomField>