force-app/main/default/objects/Account/fields/Get_CHild_MRR__c.field-meta.xml
<CustomField>
    <fullName>Get_CHild_MRR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refresh Child MRR</label>
    <type>Checkbox</type>
</CustomField>