force-app/main/default/objects/Account/fields/GetAmbassador__Short_Code__c.field-meta.xml
<CustomField>
    <fullName>GetAmbassador__Short_Code__c</fullName>
    <description>Referring Short Code</description>
    <label>Referring Short Code</label>
    <length>36</length>
    <type>Text</type>
</CustomField>