force-app/main/default/objects/Account/fields/H_IT_Budget_USD__c.field-meta.xml
<CustomField>
    <fullName>H_IT_Budget_USD__c</fullName>
    <label>IT Budget (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>