force-app/main/default/objects/Account/fields/H_Recurly_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>H_Recurly_Plan_Name__c</fullName>
    <label>Recurly Plan Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>