force-app/main/default/objects/Account/fields/Health__c.field-meta.xml
<CustomField>
    <fullName>Health__c</fullName>
    <description>Is this account at risk?</description>
    <label>Health</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>