force-app/main/default/objects/Account/fields/Health_Meter__c.field-meta.xml
<CustomField>
    <fullName>Health_Meter__c</fullName>
    <formula>IF(ISPICKVAL(Health__c,&quot;Yellow&quot;),IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 20, 200),
IF(ISPICKVAL( Health__c,&quot;Red&quot;),IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 20, 200),
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 20, 200
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health Meter</label>
    <type>Text</type>
</CustomField>