force-app/main/default/objects/Account/fields/Health_Spotlight__c.field-meta.xml
<CustomField>
    <fullName>Health_Spotlight__c</fullName>
    <label>Health Spotlight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>