force-app/main/default/objects/Account/fields/Health_Stoplight_Color_Formula__c.field-meta.xml
<CustomField>
    <fullName>Health_Stoplight_Color_Formula__c</fullName>
    <formula>If(OR(Number_of_Open_Invoices_posted__c = 2,
    AND(Days_Since_Most_Recent_Heartbeat__c &gt; 7,
    Days_Since_Most_Recent_Heartbeat__c &lt; 14)), &apos;Yellow&apos;,

If(OR(Number_of_Open_Invoices_posted__c &gt;= 3,
   (Days_Since_Most_Recent_Heartbeat__c &gt;= 14),
    (Cancellation_Requested__c = True),
    (Pause_Requested__c = True)),&apos;Red&apos;, &apos;Green&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Yellow : 2 Open invoices OR 8-14 days since heartbeat between 
Red: 3+ open invoices, 14+ days since heartbeat, cancellation/pause requested</inlineHelpText>
    <label>Health Stoplight Color</label>
    <type>Text</type>
</CustomField>