force-app/main/default/objects/Account/fields/Historical_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Historical_Account_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Salesforce ID&apos;s</inlineHelpText>
    <label>Historical SF Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>