force-app/main/default/objects/Account/fields/Historical_Last_Mod_By__c.field-meta.xml
<CustomField>
    <fullName>Historical_Last_Mod_By__c</fullName>
    <label>Historical Last Mod By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>