force-app/main/default/objects/Account/fields/Historical_Last_Viewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Historical_Last_Viewed_Date__c</fullName>
    <label>Historical Last Viewed Date</label>
    <type>DateTime</type>
</CustomField>