force-app/main/default/objects/Account/fields/Historical_Owner__c.field-meta.xml
<CustomField>
    <fullName>Historical_Owner__c</fullName>
    <label>Historical Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>