force-app/main/default/objects/Account/fields/HISTORICAL_SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>HISTORICAL_SFDC_ID__c</fullName>
    <label>Historical SFDC ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>