force-app/main/default/objects/Account/fields/HQBanquet__c.field-meta.xml
<CustomField>
    <fullName>HQBanquet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HQ Banquet</label>
    <type>Checkbox</type>
</CustomField>