force-app/main/default/objects/Account/fields/HQCatering__c.field-meta.xml
<CustomField>
    <fullName>HQCatering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HQ Catering</label>
    <type>Checkbox</type>
</CustomField>