force-app/main/default/objects/Account/fields/HQDelivery__c.field-meta.xml
<CustomField>
    <fullName>HQDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HQ Delivery</label>
    <type>Checkbox</type>
</CustomField>