force-app/main/default/objects/Account/fields/HQDrive_thru__c.field-meta.xml
<CustomField>
    <fullName>HQDrive_thru__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HQ Drive-thru</label>
    <type>Checkbox</type>
</CustomField>