force-app/main/default/objects/Account/fields/HQFoodDistributor__c.field-meta.xml
<CustomField>
    <fullName>HQFoodDistributor__c</fullName>
    <label>HQ Food Distributor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>