force-app/main/default/objects/Account/fields/HQFranchisee__c.field-meta.xml
<CustomField>
    <fullName>HQFranchisee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HQ Franchisee</label>
    <type>Checkbox</type>
</CustomField>