force-app/main/default/objects/Account/fields/HQGiftCertificates__c.field-meta.xml
<CustomField>
    <fullName>HQGiftCertificates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HQ Gift Certificates</label>
    <type>Checkbox</type>
</CustomField>