force-app/main/default/objects/Account/fields/HQOnlineOrdering__c.field-meta.xml
<CustomField>
    <fullName>HQOnlineOrdering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HQ Online Ordering</label>
    <type>Checkbox</type>
</CustomField>