force-app/main/default/objects/Account/fields/HQTakeout__c.field-meta.xml
<CustomField>
    <fullName>HQTakeout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HQ Takeout</label>
    <type>Checkbox</type>
</CustomField>