force-app/main/default/objects/Account/fields/HQTradingAreas__c.field-meta.xml
<CustomField>
    <fullName>HQTradingAreas__c</fullName>
    <label>HQ Trading Areas</label>
    <type>TextArea</type>
</CustomField>