force-app/main/default/objects/Account/fields/If_so_how_much_do_you_pay_for_it__c.field-meta.xml
<CustomField>
    <fullName>If_so_how_much_do_you_pay_for_it__c</fullName>
    <label>If so how much do you pay for it?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>