force-app/main/default/objects/Account/fields/If_so_what_video_conferencing_product__c.field-meta.xml
<CustomField>
    <fullName>If_so_what_video_conferencing_product__c</fullName>
    <label>If so what video conferencing product?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>