force-app/main/default/objects/Account/fields/Import_ID__c.field-meta.xml
<CustomField>
    <fullName>Import_ID__c</fullName>
    <label>Import ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>