force-app/main/default/objects/Account/fields/In_Collections__c.field-meta.xml
<CustomField>
    <fullName>In_Collections__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Collections</label>
    <type>Checkbox</type>
</CustomField>