force-app/main/default/objects/Account/fields/Inactive_PM_Count__c.field-meta.xml
<CustomField>
    <fullName>Inactive_PM_Count__c</fullName>
    <label>Inactive PM Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>