force-app/main/default/objects/Account/fields/Integration_Interest__c.field-meta.xml
<CustomField>
    <fullName>Integration_Interest__c</fullName>
    <label>Integration Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Integration_Interest</valueSetName>
    </valueSet>
</CustomField>