force-app/main/default/objects/Account/fields/Intercom_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Intercom_Company_Id__c</fullName>
    <description>intercom company id from import</description>
    <inlineHelpText>intercom company id from import</inlineHelpText>
    <label>Intercom Company Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>