force-app/main/default/objects/Account/fields/Intercom_Id__c.field-meta.xml
<CustomField>
    <fullName>Intercom_Id__c</fullName>
    <description>Company ID from Hoopla Intercom export</description>
    <label>Intercom Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>