force-app/main/default/objects/Account/fields/Invoice_delivery_method__c.field-meta.xml
<CustomField>
    <fullName>Invoice_delivery_method__c</fullName>
    <label>Invoice delivery method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do not send Invoices</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>