force-app/main/default/objects/Account/fields/Invoices_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Invoices_Amount_Due__c</fullName>
    <label>Invoices Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>