force-app/main/default/objects/Account/fields/Invoices_Value_Charged__c.field-meta.xml
<CustomField>
    <fullName>Invoices_Value_Charged__c</fullName>
    <label>Invoices Value Charged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>