force-app/main/default/objects/Account/fields/Is_On_Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Is_On_Payment_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is On Payment Plan</label>
    <type>Checkbox</type>
</CustomField>