force-app/main/default/objects/Account/fields/Last_Failed_PM__c.field-meta.xml
<CustomField>
    <fullName>Last_Failed_PM__c</fullName>
    <inlineHelpText>This is the card detail of the last failed payment transaction, and this is populated from the flow &quot;Failed Payment Transactions - Accounts&quot;</inlineHelpText>
    <label>Last Failed PM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>