force-app/main/default/objects/Account/fields/Last_Failure_Category__c.field-meta.xml
<CustomField>
    <fullName>Last_Failure_Category__c</fullName>
    <formula>IF( DATEVALUE(Failure_Notice__c) = TODAY(), &quot;Today&quot;, &quot;Not Today&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Failure Notice Sent</label>
    <type>Text</type>
</CustomField>